--- a/errors2.html
+++ b/errors2.html
@@ -14,7 +14,7 @@
         </td>
       </tr>
       <tr>
-        <td colspan="2">
+        <td colspan="1">
           <h1>Sierra Vista rescue dog competing in Westminster show</h1>
         </td>
       </tr>
@@ -54,9 +54,11 @@
           <p>Catch live streaming of the breed competitions at <a href="http://westminsterkennelclub.org">westminsterkennelclub.org</a></p>
 
           <!-- TODO: turn the next three lines into an unordered list -->
-          <p>Treeing Walker coonhounds show at 6:30 a.m. Tucson time on Monday, Feb. 16</p>
-          <p>Polish lowland sheepdogs show at 7:45 a.m. Tucson time on Monday, Feb. 16</p>
-          <p>Parson Russell Terriers show at 8 a.m. Tucson time on Tuesday, Feb. 17</p>
+        <ul>
+          <li>Treeing Walker coonhounds show at 6:30 a.m. Tucson time on Monday, Feb. 16</li>
+          <li>Polish lowland sheepdogs show at 7:45 a.m. Tucson time on Monday, Feb. 16</li>
+          <li>Parson Russell Terriers show at 8 a.m. Tucson time on Tuesday, Feb. 17</li>
+        </ul>
 
           <p>Group and Best in Show competitions will be televised live from Madison Square Garden at 6 p.m. Monday, Feb. 16 on CNBC and at 6 p.m. Tuesday, Feb. 17 on USA Network.</p>
           <p>SOURCE: The Westminster Kennel Club</p>
