--- a/errors2.html
+++ b/errors2.html
@@ -43,15 +43,17 @@
           <h7>Competing at Westminster</h7>
 
           <!-- TODO: turn the next 4 lines into an ordered list -->
-          <p>Dogs can enter the Westminster Kennel Club Dog Show as American Kennel Club Champions or through class competitions.</p>
-          <p>Champions must have won 15 points at a variety of shows, winning up to five points at one show. Those 15 points must include two majors (a win of three points or more) under two judges.</p>
-          <p>Dogs with only one major can compete in classes such as American Bred or Bred by Exhibitor. The winners advance to the main Best of Breed competition.</p>
-          <p>Dogs compete first for Best of Breed, with winners moving on to the Group rounds. There, dogs compete with similar breeds, in groups such as Terrier, Working or Hound. Winners of the Group rounds move on to Best in Show, where judges pick an ultimate champion from seven finalists.</p>
+        <ol>
+          <li>Dogs can enter the Westminster Kennel Club Dog Show as American Kennel Club Champions or through class competitions.</li>
+          <li>Champions must have won 15 points at a variety of shows, winning up to five points at one show. Those 15 points must include two majors (a win of three points or more) under two judges.</li>
+          <li>Dogs with only one major can compete in classes such as American Bred or Bred by Exhibitor. The winners advance to the main Best of Breed competition.</li>
+          <li>Dogs compete first for Best of Breed, with winners moving on to the Group rounds. There, dogs compete with similar breeds, in groups such as Terrier, Working or Hound. Winners of the Group rounds move on to Best in Show, where judges pick an ultimate champion from seven finalists.</li>
 
           <p>SOURCE: <a href="http://westminsterkennelclub.org">westminsterkennelclub.org</a></p>
           <h3>Watch the show</h3>
           <p>The Westminster Kennel Club Dog Show takes place Monday, Feb. 16 and Tuesday, Feb. 17.</p>
           <p>Catch live streaming of the breed competitions at <a href="http://westminsterkennelclub.org">westminsterkennelclub.org</a></p>
+        </ol>
 
           <!-- TODO: turn the next three lines into an unordered list -->
         <ul>
