--- a/errors2.html
+++ b/errors2.html
@@ -40,7 +40,7 @@
           <p>Contact reporter Johanna Willett at <a href="mailto:jwillett@tucson.com">jwillett@tucson.com</a> or 573-4357. On Twitter: @JohannaWillett</p>
         </td>
         <td width="30%" valign="top">
-          <h3>Competing at Westminster</h3><br>
+          <h3>Competing at Westminster</h3>
         <ol>
           <li>Dogs can enter the Westminster Kennel Club Dog Show as American Kennel Club Champions or through class competitions.</li>
           <li>Champions must have won 15 points at a variety of shows, winning up to five points at one show. Those 15 points must include two majors (a win of three points or more) under two judges.</li>
