--- a/errors2.html
+++ b/errors2.html
@@ -48,7 +48,7 @@
           <li>Dogs compete first for Best of Breed, with winners moving on to the Group rounds. There, dogs compete with similar breeds, in groups such as Terrier, Working or Hound. Winners of the Group rounds move on to Best in Show, where judges pick an ultimate champion from seven finalists.</li>
         </ol>
 
-          <p>SOURCE: <a href="http://westminsterkennelclub.org">westminsterkennelclub.org</a></p>
+          <p>SOURCE: <a href="http://westminsterkennelclub.org">WESTMINSTERKENNELCLUB.ORG</a></p>
           <h3>Watch the show</h3>
           <p>The Westminster Kennel Club Dog Show takes place Monday, Feb. 16 and Tuesday, Feb. 17.</p>
           <p>Catch live streaming of the breed competitions at <a href="http://westminsterkennelclub.org">westminsterkennelclub.org</a></p>
