--- a/index.html
+++ b/index.html
@@ -6,8 +6,38 @@
   </head>
   <body>
     <center>
-      <img src="https://tucson.com/app/images/ua/storm.jpg" alt=Desert cactus with clouds and lightning" style="width:250">
+      <img src="https://tucson.com/app/images/ua/storm.jpg" alt=Desert cactus with clouds and lightning><br>
       <h2>Brett Fera</h2>
+      <table border="1" cellpadding="5">
+        <tr>
+          <td colspan="2">
+            <center>
+              <h3>News Sites</h3>
+            </center>
+          </td>
+        </tr>
+        <tr>
+          <td>Arizona Daily Star</td>
+          <td>Arizona Daily Wildcat</td>
+        </tr>
+        <tr>
+          <td>Arizona Public Media</td>
+          <td>Tucson Sentinel</td>
+        </tr>
+        <tr>
+          <td>KVOA News 4 Tucson</td>
+          <td>KGUN 9 On Your Side</td>
+        </tr>
+        <tr>
+          <td>Cheddar</td>
+          <td>Brie</td>
+        </tr>
+      </table>
+
+    </body>
+  </html>
+
+
     </center>
   </body>
 </html>
