--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
           </td>
         </tr>
         <tr>
-          <td><a href="http://tucson.com" target="_blank">Arizona Daily Star</a></td>
-        <td><a href="http://dailywildcat.com" target="_blank">Arizona Daily Wildcat</a></td>
+          <td><a href="https://tucson.com" target="_blank">Arizona Daily Star</a></td>
+        <td><a href="https://dailywildcat.com" target="_blank">Arizona Daily Wildcat</a></td>
         </tr>
         <tr>
           <td>Arizona Public Media</td>
