--- a/index.html
+++ b/index.html
@@ -18,15 +18,15 @@
         </tr>
         <tr>
           <td><a href="https://tucson.com" target="_blank">Arizona Daily Star</a></td>
-        <td><a href="https://dailywildcat.com" target="_blank">Arizona Daily Wildcat</a></td>
+          <td><a href="https://dailywildcat.com" target="_blank">Arizona Daily Wildcat</a></td>
         </tr>
         <tr>
-          <td>Arizona Public Media</td>
-          <td>Tucson Sentinel</td>
+          <td><a href="https://www.azpm.org/" target="_blank">Arizona Public Media</a></td>
+          <td><a href="http://www.tucsonsentinel.com/" target="_blank">Tucson Sentinel</a></td>
         </tr>
         <tr>
-          <td>KVOA News 4 Tucson</td>
-          <td>KGUN 9 On Your Side</td>
+          <td><a href="https://kvoa.com/" target="_blank">KVOA News 4 Tucson/a></td>
+          <td><a href="https://www.kgun9.com/" target="_blank">KGUN 9 On Your Side</a></td>
         </tr>
       </table>
 
