--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>About Me</title>
-    <meta name= "viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
   <body>
     <center>
@@ -21,8 +21,8 @@
           <td><a href="https://dailywildcat.com" target="_blank">Arizona Daily Wildcat</a></td>
         </tr>
         <tr>
-          <td><a href="https://www.azpm.org/" target="_blank">Arizona Public Media</a></td>
-          <td><a href="http://www.tucsonsentinel.com/" target="_blank">Tucson Sentinel</a></td>
+          <td><a href="https://azpm.org/" target="_blank">Arizona Public Media</a></td>
+          <td><a href="http://tucsonsentinel.com/" target="_blank">Tucson Sentinel</a></td>
         </tr>
         <tr>
           <td><a href="https://kvoa.com/" target="_blank">KVOA News 4 Tucson/a></td>
