--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           <td><a href="http://tucsonsentinel.com/" target="_blank">Tucson Sentinel</a></td>
         </tr>
         <tr>
-          <td><a href="https://kvoa.com/" target="_blank">KVOA News 4 Tucson/a></td>
+          <td><a href="https://kvoa.com/" target="_blank">KVOA News 4 Tucson</a></td>
           <td><a href="https://www.kgun9.com/" target="_blank">KGUN 9 On Your Side</a></td>
         </tr>
       </table>
