--- a/index.html
+++ b/index.html
@@ -30,9 +30,22 @@
         </tr>
       </table>
 
-    </body>
-  </html>
-
+        <p>Lenny, a 3-year-old treeing Walker coonhound, should not be a champion.</p>
+         <p>When <strong>Jordan Confer</strong> met the dog — a rescue — he was skinny, skittish and terrified of his new owner. Naturally, it was raining that day, Confer says.</p>
+         <p>Lenny's rescuers figured that Confer, a teenager who was becoming increasingly involved in dog shows, could learn a few things as Lenny's owner. They didn't expect much more.</p>
+         <p>Next week, Confer, 19, and Lenny will take on the 139th Westminster Kennel Club Dog Show in Manhattan for the second time. Last year, he was invited to the show and competed as a junior handler and in the breed competition.</p>
+         <p>Handling and showing dogs runs in the family. Confer's close family member <strong>Liane Paulson</strong> also competed at Westminster last year. She says Confer and her 14-year-old son, <strong>Shane Paulson,</strong> basically grew up together, and this year, Shane will join them at Westminster to compete at the main breed level.</p>
+         <p>The family members will travel together, as they often have since Liane introduced both boys to dog shows roughly 10 years ago. This time, they will leave their homes in Sierra Vista to compete in New York — in the "World Series of dog shows," Liane says.</p>
+         <p>"I'm very excited just to have the experience to be able to say I went there and did that, and I'm very excited to show my dog," says Shane, whose Polish lowland sheepdog, Stuart, will join him. "I am nervous, because I know it's a huge show and is viewed on the Internet and TV. … It's just nerve-racking."</p>
+         <p>Last year Lenny received an Award of Merit within his breed, meaning that although he did not win a Best of Breed or similar title, a judge deemed him to be an exceptional entry among other competing treeing Walker coonhounds.</p>
+         <p>This year, Lenny is the No.  2 treeing Walker coonhound in the country and the top male in the breed, says <strong>Nancy Winton</strong>, 68, one of Lenny's breeders. The pair also boasts multiple Group wins, a few Reserve Best in Shows and at least one Best in Show, Winton says.</p>
+         <p>"It's a sport dominated by girls at this age," Liane says. "People are really excited to see boys doing it, and both of these boys, because they have dogs in their lives, neither one of them has gone in any bad directions."</p>
+         <p>Liane, who breeds Parson Russell terriers, also took a rescue dog to the show last year. The dog was rescued out of a pet home after a Dalmatian attacked him. She didn't want Jordan going alone to New York, so she took a dog "just to have fun."</p>
+         <p>This year, she will compete with Foxy, another Parson Russell terrier, who, like Lenny, comes to the Westminster show with a Grand Champion title. Stuart has a Champion title.</p>
+         <p>"Shane has gotten Best Junior," Liane says, and Foxy has placed third and fourth in terrier groups and will be at the American Kennel Club Meet the Breeds event in New York next Saturday.</p>
+         <p>It has been a long road.</p>
+         <p>"I was told that (Lenny) would most likely not be a show dog just because of the way he was acting," says Confer, holding Lenny's leash tight as they sit in a park. "I wanted to make him my juniors dog, so I just started working with him."</p>
+         <p>Copyright 2015 Arizona Daily Star. All rights reserved. This material may not be published, broadcast, rewritten or redistributed.</p>
 
     </center>
   </body>
