--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <center>
       <img src="https://tucson.com/app/images/ua/storm.jpg" alt=Desert cactus with clouds and lightning><br>
       <h2>Brett Fera</h2>
-      <table border="1" cellpadding="5">
+      <table border="0" cellpadding="5">
         <tr>
           <td colspan="2">
             <center>
@@ -22,7 +22,7 @@
         </tr>
         <tr>
           <td><a href="https://azpm.org/" target="_blank">Arizona Public Media</a></td>
-          <td><a href="http://tucsonsentinel.com/" target="_blank">Tucson Sentinel</a></td>
+          <td><a href="https://tucsonsentinel.com/" target="_blank">Tucson Sentinel</a></td>
         </tr>
         <tr>
           <td><a href="https://kvoa.com/" target="_blank">KVOA News 4 Tucson</a></td>
