--- a/about.html
+++ b/about.html
@@ -12,31 +12,15 @@
     </center>
     <center>
     <p class="biobox">
-      Originally from Los Angeles, I've considered Tucson "home" since coming to the University of Arizona as a first-year undergrad in 2000. I hold degrees in journalism (B.A. 2005) and business (M.B.A. 2010) from the UA, and consider myself immensely priveleged to have my career bring me back to campus full-time in 2013. Today, I serve hundreds of dedicated students each year as director of Arizona Student Media, the UA department that financially and operationally supports the 121-year-old Arizona Daily Wildcat student news organization, UATV-3 student television, and KAMP Student Radio. I live near campus with my wife, Lindsey (also a UA alumna and my favorite on-campus coworker!), our beagle, Mayhem (he actually sweet and well-behaved, and rarely lives up to his name), and, in my freetime, I freelance covering the Tucson Roadrunners minor league hockey team and other sports for the Arizona Daily Star and Tucson.com.
+      Originally from Los Angeles, I've considered Tucson "home" since coming to the University of Arizona as a first-year undergrad in 2000. I hold degrees in journalism (B.A. 2005) and business (M.B.A. 2010) from the UA, and consider myself immensely priveleged to have my career bring me back to campus full-time in 2013. Today, I serve hundreds of dedicated students each year as director of Arizona Student Media, the UA department that financially and operationally supports the 121-year-old Arizona Daily Wildcat student news organization, UATV-3 student television, and KAMP Student Radio. I live near campus with my wife, Lindsey (also a UA alumna and my favorite on-campus coworker!), our beagle, Mayhem (he actually sweet and well-behaved, and rarely lives up to his name), and, in my free time, I freelance covering the Tucson Roadrunners minor league hockey team and other sports for the Arizona Daily Star and Tucson.com.
     </p>
     </center>
-    <center>
-      <table border="1" cellpadding="5">
-        <tr>
-          <td colspan="2">
-            <center>
-              <h3>News Sites</h3>
-            </center>
-          </td>
-        </tr>
-        <tr>
-          <td><a href="https://tucson.com" target="_blank">Arizona Daily Star</a></td>
-          <td><a href="https://dailywildcat.com" target="_blank">Arizona Daily Wildcat</a></td>
-        </tr>
-        <tr>
-          <td><a href="https://azpm.org/" target="_blank">Arizona Public Media</a></td>
-          <td><a href="https://tucsonsentinel.com/" target="_blank">Tucson Sentinel</a></td>
-        </tr>
-        <tr>
-          <td><a href="https://kvoa.com/" target="_blank">KVOA News 4 Tucson</a></td>
-          <td><a href="https://www.kgun9.com/" target="_blank">KGUN 9 On Your Side</a></td>
-        </tr>
-      </table>
-    </center>
+        <div class="newstitle">News Sites</div>
+        <div class="newssite"><a href="https://tucson.com" target="_blank">Arizona Daily Star</a></div>
+        <div class="newssite"><a href="https://dailywildcat.com" target="_blank">Arizona Daily Wildcat</a></div>
+        <div class="newssite"><a href="https://azpm.org/" target="_blank">Arizona Public Media</a></div>
+        <div class="newssite"><a href="https://tucsonsentinel.com/" target="_blank">Tucson Sentinel</a></div>
+        <div class="newssite"><a href="https://kvoa.com/" target="_blank">KVOA News 4 Tucson</a></div>
+        <div class="newssite"><a href="https://www.kgun9.com/" target="_blank">KGUN 9 On Your Side</a></div>
   </body>
 </html>
