--- a/about.html
+++ b/about.html
@@ -2,25 +2,41 @@
 <html>
   <head>
     <title>About Me</title>
-    <link rel="stylesheet" href="site.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="site.css">
   </head>
   <body>
     <center>
-      <img src="https://tucson.com/app/images/ua/storm.jpg" alt=Desert cactus with clouds and lightning><br>
-      <h2>Brett Fera</h2>
-    </center>
-    <center>
-    <p class="biobox">
-      Originally from Los Angeles, I've considered Tucson "home" since coming to the University of Arizona as a first-year undergrad in 2000. I hold degrees in journalism (B.A. 2005) and business (M.B.A. 2010) from the UA, and consider myself immensely priveleged to have my career bring me back to campus full-time in 2013. Today, I work with hundreds of dedicated students each year as director of Arizona Student Media, the UA department that financially and operationally supports the 121-year-old Arizona Daily Wildcat student news organization, UATV-3 student television, and KAMP Student Radio. I live near campus with my wife, Lindsey (also a UA alumna and my favorite on-campus coworker!), our beagle, Mayhem (he's actually sweet and well-behaved, and rarely lives up to his name), and, in my free time, I freelance covering the Tucson Roadrunners minor league hockey team and other sports for the Arizona Daily Star and Tucson.com.
-    </p>
-    </center>
+
+      <div class="name_container">
+        Brett Fera
+      </div>
+
+      <div class="content_container">
+
+      <div class="image_container">
+        <img src="media/mayhem.jpg" alt=Mayhem, the beagle!>
+      </div>
+
+      <div class="bio_container">
+        Originally from Los Angeles, Tucson has been my on- and off- and on-again home for 20 years now. With degrees in journalism (B.A. 2005) and business (M.B.A. 2010) from the University of Arizona, I consider myself immensely privileged to be able to work each day with hundreds of dedicated students as director of Arizona Student Media – the UA department that oversees and supports the operation of the 121-year-old Arizona Daily Wildcat, UATV-3 student television, and KAMP Student Radio. I live near campus with my wife, Lindsey (also a UA alumna and my favorite on-campus coworker!) and our beagle, Mayhem (he’s actually sweet and well-behaved, and rarely lives up to his name).
+      </div>
+
+      <div class="clear"></div>
+
+      </div>
+
+      <div class="news_container">
         <div class="newstitle">News Sites</div>
         <div class="newssite"><a href="https://tucson.com" target="_blank">Arizona Daily Star</a></div>
-        <div class="newssite"><a href="https://dailywildcat.com" target="_blank">Arizona Daily Wildcat</a></div>
-        <div class="newssite"><a href="https://azpm.org/" target="_blank">Arizona Public Media</a></div>
+        <div class="newssite"><a href="https://azpm.org/" target="_blank">AZPM</a></div>
+        <div class="newssite"><a href="https://dailywildcat.com" target="_blank">The Daily Wildcat</a></div>
         <div class="newssite"><a href="https://tucsonsentinel.com/" target="_blank">Tucson Sentinel</a></div>
-        <div class="newssite"><a href="https://kvoa.com/" target="_blank">KVOA News 4 Tucson</a></div>
-        <div class="newssite"><a href="https://www.kgun9.com/" target="_blank">KGUN 9 On Your Side</a></div>
+        <div class="newssite"><a href="https://kvoa.com/" target="_blank">KVOAon</a></div>
+        <div class="newssite"><a href="https://www.kgun9.com/" target="_blank">KGUNde</a></div>
+      </div>
+
+
+    </center>
   </body>
-</html>
+  </html>
