--- a/about.html
+++ b/about.html
@@ -1,11 +1,20 @@
 <!DOCTYPE html>
 <html>
   <head>
+
+    <title>About Me</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="site.css">
+
+    <script src="https://storage.googleapis.com/feednami-static/js/feednami-client-v1.0.1.js">
+    </script>
+
     <script>
           window.onload = function() {
             // functions that run after page loads
             displayGreeting();
             fetchWeather();
+            displayRSSFeed();
           }
           // display good morning, afternoon or evening based on the time
           function displayGreeting() {
@@ -21,6 +30,7 @@
             }
             document.getElementById("greeting").innerHTML = "Good " + description;
           }
+
           // get weather data from openweathermap and display the current temp
           function fetchWeather() {
             fetch("https://api.openweathermap.org/data/2.5/weather?zip=85716,US&appid=fa4e183ab0f9b88719c98b921fcb8e64&units=imperial")
@@ -32,11 +42,31 @@
               document.getElementById("weather").innerHTML = "Error in fetchWeather function";
             });
           }
-        </script>
-    <title>About Me</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="site.css">
+
+        function displayRSSFeed() {
+        // fetch an RSS feed and display the title and description
+        var origURL = 'https://tucson.com/search/?f=rss&t=article&c=news/local&l=25&s=start_time&sd=desc';
+        // feednami doesn't like & so replace with %26
+        var replacedURL = origURL.replace(/&/g, "%26");
+        feednami.load(replacedURL,function(result) {
+          if (result.error) {
+            console.log(result.error);
+          } else {
+            var entries = result.feed.entries
+            for (var i = 0; i < entries.length; i++) {
+              var entry = entries[i];
+              let divElement = '<div class="rss_title"><a href="' + entry.link + '" target="_blank">' + entry.title + '</a></div><div class="rss_description">' + entry.description + '</div>';
+              document.getElementById("rss_items").innerHTML += divElement;
+            }
+          }
+        });
+      }
+
+      </script>
+
   </head>
+
+
   <body>
     <center>
     <div id="greeting"></div>
@@ -67,11 +97,18 @@
         <div class="newssite"><a href="https://azpm.org/" target="_blank">AZPM</a></div>
         <div class="newssite"><a href="https://dailywildcat.com" target="_blank">The Daily Wildcat</a></div>
         <div class="newssite"><a href="https://tucsonsentinel.com/" target="_blank">Tucson Sentinel</a></div>
-        <div class="newssite"><a href="https://kvoa.com/" target="_blank">KVOAon</a></div>
-        <div class="newssite"><a href="https://www.kgun9.com/" target="_blank">KGUNde</a></div>
+        <div class="newssite"><a href="https://kvoa.com/" target="_blank">KVOA</a></div>
+        <div class="newssite"><a href="https://www.kgun9.com/" target="_blank">KGUN</a></div>
+
+      <div class="clear"></div>
+
       </div>
 
-
     </center>
+
+    <div id="rss_items"></div>
+
+
+
   </body>
   </html>
