--- a/about.html
+++ b/about.html
@@ -36,7 +36,7 @@
             fetch("https://api.openweathermap.org/data/2.5/weather?zip=85716,US&appid=fa4e183ab0f9b88719c98b921fcb8e64&units=imperial")
             .then(function(resp) { return resp.json() })
             .then(function(data) {
-              document.getElementById("weather").innerHTML = "It is currently " + data.main.temp + "&#176;" + " in Tucson, AZ.";
+              document.getElementById("weather").innerHTML = "It is currently " + data.main.temp + "&#176;" + " in " + data.name + ".";
             })
             .catch(function() {
               document.getElementById("weather").innerHTML = "Error in fetchWeather function";
