--- a/about.html
+++ b/about.html
@@ -66,7 +66,7 @@
 
       function listSheet() {
              // list google sheet rows
-             fetch('https://api.sheetson.com/v2/sheets/Sheet1', {
+             fetch('https://api.sheetson.com/v2/sheets/Sheet1?no-cache=true', {
                withCredentials: true,
                headers: {
                  'Content-Type': 'application/json',
